# egui_pretext

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  plan.md  skills-lock.json
.agents/skills/pretext-upstream-sync/: SKILL.md
.agents/skills/pretext-upstream-sync/agents/: openai.yaml
.agents/skills/writing-plan/: SKILL.md
.agents/skills/writing-plan/assets/templates/plans/: plan.md
.agents/skills/writing-plan/references/: plan-patterns.md
.agents/skills/writing-spec/: SKILL.md
.agents/skills/writing-tasks/: SKILL.md
.agents/skills/writing-tasks/assets/templates/tasks/: inbox.md
.agents/skills/writing-tasks/assets/templates/tasks/projects/: project.md
.agents/skills/writing-tasks/assets/templates/tasks/templates/: task.md
.github/workflows/: ci.yml
crates/pretext/: Cargo.toml  README.md
crates/pretext-egui/: Cargo.toml  README.md
crates/pretext-egui/assets/fonts/: SOURCES.md
crates/pretext-egui/src/: advanced.rs  advanced_impl.rs  advanced_types.rs  experimental.rs  glyph_atlas.rs  lib.rs
crates/pretext-render/: Cargo.toml  README.md
crates/pretext-render/src/: lib.rs
crates/pretext/src/: advanced.rs  analysis.rs  bidi.rs  engine.rs  font_catalog.rs  layout.rs  lib.rs  line_break.rs  measure.rs  rich_inline.rs
crates/pretext/tests/: bidi.rs  font_fallback.rs  goldens.rs  layout_parity.rs  letter_spacing.rs  line_break.rs  line_runs.rs  paragraph_cache.rs  segmentation.rs  shaping.rs  whitespace.rs
crates/pretext/tests/goldens/: 01_english_normal.json  02_english_prewrap.json  03_arabic_rtl.json  04_cjk.json  05_myanmar.json  06_mixed_direction.json  07_nbsp_wj_zwsp.json  08_soft_hyphen.json  09_emoji_zwj.json  10_url.json  11_numbers_punctuation.json  12_editorial_obstacle.json
crates/pretext/tests/support/: mod.rs
demos/app/: Cargo.toml
demos/app/assets/: masonry.json
demos/app/assets/fonts/: SOURCES.md
demos/app/src/: app.rs  assets.rs  demo_assets.rs  geometry.rs  lib.rs  main.rs
demos/app/src/demos/: accordion.rs  bubbles.rs  catalog.rs  dragon_through_text.rs  dynamic_layout.rs  editorial_engine.rs  justification_algorithms.rs  markdown_chat.rs  masonry.rs  mod.rs  rich_note.rs  text_runs.rs  variable_typographic_ascii.rs
demos/app/tests/: smoke.rs
docs/: upstream-map.md
omni-coding/specs/: README.md
omni-coding/specs/current/capability/: demo-app.yaml  egui-rendering.yaml  rich-inline-flow.yaml  text-layout.yaml  text-rasterization.yaml
omni-coding/specs/current/contract/: egui-renderer-api.yaml  pretext-public-api.yaml  upstream-map.yaml
omni-coding/specs/current/system/: runtime.yaml  upstream-alignment.yaml  validation.yaml  workspace.yaml
omni-coding/specs/guides/capability/: egui-rendering.yaml  text-layout.yaml
omni-coding/specs/guides/contract/: pretext-public-api.yaml
omni-coding/specs/guides/system/: upstream-alignment.yaml  validation.yaml  workspace.yaml
omni-coding/specs/log/: 0001.bootstrap-current-snapshot.yaml
skills/egui-pretext-layout/: SKILL.md
skills/egui-pretext-layout/agents/: openai.yaml
skills/egui-pretext-layout/references/: patterns.md  performance.md  repo-map.md  validation.md
tests_support/: editorial_obstacle.rs
