[package]
name = "pretext-egui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
egui.workspace = true
image.workspace = true
lru.workspace = true
pretext = { path = "../pretext" }
pretext-render = { path = "../pretext-render" }
resvg.workspace = true
tiny-skia.workspace = true
ttf-parser.workspace = true
unicode-segmentation.workspace = true
