[package]
name = "pretext-demo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
pretext = { path = "../../crates/pretext" }
pretext-render = { path = "../../crates/pretext-render" }
pretext-egui = { path = "../../crates/pretext-egui" }
resvg.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny-skia.workspace = true
unicode-segmentation.workspace = true
